Further progress on QSearchPopup and QSS issue resolution

--- a/VisualLinkerScript.vcxproj
+++ b/VisualLinkerScript.vcxproj
@@ -636,7 +636,19 @@
   <ItemGroup>
     <QtRcc Include="Resources.qrc">
     </QtRcc>
+    <None Include="Images\arrow-drop-down-icon.svg" />
+    <None Include="Images\arrow-drop-up-icon.svg" />
+    <None Include="Images\arrow-left-icon.svg" />
+    <None Include="Images\arrow-right-icon.svg" />
+    <None Include="Images\chevron-right-icon.svg" />
+    <None Include="Images\close-icon.svg" />
     <None Include="Images\close-sm-svgrepo-com.svg" />
+    <None Include="Images\expand-more-icon.svg" />
+    <None Include="Images\find-replace-icon.svg" />
+    <None Include="Images\match-case-icon.svg" />
+    <None Include="Images\match-word-icon.svg" />
+    <None Include="Images\regular-expression-icon.svg" />
+    <None Include="Images\search-magnifying-glass-icon.svg" />
     <None Include="Stylesheets\colorpalette.txt" />
     <None Include="Stylesheets\default.qss" />
   </ItemGroup>
