--- a/VisualLinkerScript.vcxproj.filters
+++ b/VisualLinkerScript.vcxproj.filters
@@ -464,6 +464,9 @@
     <ClCompile Include="Components\QLinkerScriptSession\CLinkerScriptSessionFileInfo.h">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="MD5\MD5.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components\QScintilla\scintilla\lexlib\Accessor.h">
@@ -1205,6 +1208,12 @@
       <Filter>Generated Files</Filter>
     </ClInclude>
     <ClInclude Include="Components\InputDialogs\QListAssistedInput.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MD5\MD5.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MD5\MD5_loc.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
   </ItemGroup>
