Edge case for parsers was addressed
Edge case for parsers was addressed. The issue was reaching EOF while the parse was in the middle of parsing, and the cause of termination was no longer an invalid word or character, simply lack of more characters to analyze.

--- a/VisualLinkerScript.vcxproj
+++ b/VisualLinkerScript.vcxproj
@@ -215,6 +215,7 @@
     <ClCompile Include="Components\QScintilla\scintilla\lexlib\Accessor.cpp" />
     <ClCompile Include="Components\QScintilla\scintilla\src\AutoComplete.cpp" />
     <ClCompile Include="Components\MemoryVisualizer\Rendering\CArrowsRenderer.cpp" />
+    <ClCompile Include="Components\QScintilla\VlsScintilla.cpp" />
     <ClCompile Include="MD5\MD5.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CAssignmentParser.cpp" />
     <ClCompile Include="ParsingEngine\SubParsers\CAssignmentProcedureParser.cpp" />
@@ -356,6 +357,7 @@
     <ClInclude Include="Components\QScintilla\scintilla\lexlib\Accessor.h" />
     <ClInclude Include="Compiler\ExpressionEvaluation\ArithmeticOperationType.h" />
     <ClInclude Include="Components\QScintilla\scintilla\src\AutoComplete.h" />
+    <ClInclude Include="Components\QScintilla\VlsScintilla.h" />
     <ClInclude Include="Components\QSearchPopup\SearchPerimeterTypeEnum.h" />
     <ClInclude Include="Components\QSearchPopup\SearchReplaceRequestTypeEnum.h" />
     <ClInclude Include="MD5\MD5.h" />
