--- a/VisualLinkerScript.vcxproj.filters
+++ b/VisualLinkerScript.vcxproj.filters
@@ -1222,6 +1222,9 @@
     <ClInclude Include="Components\QScintilla\VlsScintilla.h">
       <Filter>Generated Files</Filter>
     </ClInclude>
+    <ClInclude Include="Models\CIndentationInfo.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="debug\moc_predefs.h.cbt">
