--- a/VisualLinkerScript.vcxproj.filters
+++ b/VisualLinkerScript.vcxproj.filters
@@ -470,6 +470,9 @@
     <ClCompile Include="Components\QScintilla\VlsScintilla.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="Components\QManualSizeGrip\QManualSizeGrip.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components\QScintilla\scintilla\lexlib\Accessor.h">
@@ -1261,6 +1264,9 @@
       <Filter>Generated Files</Filter>
     </QtMoc>
     <QtMoc Include="Components\InputDialogs\QLabelAssistedInput.h">
+      <Filter>Generated Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Components\QManualSizeGrip\QManualSizeGrip.h">
       <Filter>Generated Files</Filter>
     </QtMoc>
   </ItemGroup>
